# transcript-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: artefacts.py  cache.py  metrics.py  runner.py  tiers.py
bench/datasets/: ami.py  base.py  summ_re.py
bench/results/: leaderboard.md  runs.csv
docs/: todo.md
docs/superpowers/plans/: 2026-05-09-transcript-cli.md  2026-05-12-perf-measurement-workflow.md
docs/superpowers/specs/: 2026-05-09-transcript-cli-design.md  2026-05-11-perf-measurement-design.md
scripts/: _smoke.py  benchmark.py  diarize_diarizen.py  dump_pipeline.py  generate_tiny_wav.sh  install.sh
src/transcript/: __main__.py  _debug.py  align.py  audio.py  cli.py  config.py  diarize.py  diarize_common.py  diarize_diarizen.py  doctor.py  llm_fix.py  merge.py  models.py  pipeline.py  pipeline_config.py  progress.py  transcribe.py
src/transcript/formatters/: __init__.py  json.py  md.py  srt.py  txt.py
tests/: conftest.py  test_align.py  test_ami_loader.py  test_audio.py  test_bench_artefacts.py  test_bench_cache.py  test_bench_metrics.py  test_bench_runner.py  test_bench_smoke.py  test_bench_tiers.py  test_benchmark_cli.py  test_cli.py  test_config.py  test_diarize.py  test_diarize_common.py  test_diarize_diarizen.py  test_doctor.py  test_formatters_dispatcher.py  test_formatters_json.py  test_formatters_md.py  test_formatters_srt.py  test_formatters_txt.py  test_llm_fix.py  test_merge.py  test_merge_prob.py  test_models.py  test_pipeline.py  test_pipeline_config.py  test_pipeline_integration.py  test_progress.py  test_summ_re_loader.py  test_transcribe.py
tests/fixtures/: whisper_output_sample.json
