[project]
name = "transcript-app"
version = "0.1.0"
description = "Local voice-memo transcription with speaker diarization (whisper.cpp + pyannote)"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Thibaut Troude" }]
dependencies = [
    "pyannote.audio>=3.1,<3.4",
    # Pinned <2.5: pyannote.audio 3.3.x imports torchaudio.AudioMetaData,
    # which was deprecated in torchaudio 2.5 and removed in 2.9+.
    "torch>=2.2,<2.5",
    "torchaudio>=2.2,<2.5",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
transcript = "transcript.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "integration: real whisper.cpp + pyannote, requires install + HF token",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
