[project]
name = "transcript-app"
version = "0.1.0"
description = "Local voice-memo transcription with speaker diarization (whisper.cpp + NeMo Sortformer)"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Thibaut Troude" }]
# Pins are exact, not ranges, to keep the runtime reproducible across machines and
# to avoid uv silently picking a Python with no torch wheels (torch <2.5 ships only
# cp310/cp311/cp312 wheels — Python 3.13+ resolutions break). Bump deliberately.
dependencies = [
    "torch==2.4.1",
    "torchaudio==2.4.1",
    # NeMo Sortformer (nvidia/diar_sortformer_4spk-v1) is our diarizer.
    # Pulls in ~1.5 GB of transitive deps from the asr extras.
    "nemo_toolkit[asr]==2.2.1",
    # NeMo 2.2.1 calls np.sctypes (removed in numpy 2.0) in its audio
    # preprocessing path. Pin numpy<2 until NeMo updates.
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.4",
]

[project.scripts]
transcript = "transcript.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "integration: real whisper.cpp + pyannote, requires install + HF token",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
