[project]
name = "transcript-cli"
version = "0.1.0"
description = "Local voice-memo transcription with speaker diarization (whisper.cpp + NeMo Sortformer)"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Thibaut Troude" }]
# Pins are exact, not ranges, to keep the runtime reproducible across machines and
# to avoid uv silently picking a Python with no torch wheels (torch <2.5 ships only
# cp310/cp311/cp312 wheels — Python 3.13+ resolutions break). Bump deliberately.
dependencies = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    # NeMo Streaming Sortformer (nvidia/diar_streaming_sortformer_4spk-v2.1) is
    # our diarizer. Pulls in ~1.5 GB of transitive deps from the asr extras.
    # 2.7.x is the first stable line exposing SortformerModules.spkcache_len.
    "nemo_toolkit[asr]==2.7.3",
    # NeMo 2.7.3 only requires numpy>=1.22 in core, but pins numpy<2 for its
    # nlp-only/all extras (sox+others still aren't numpy-2 ready). Stay on 1.x.
    "numpy==1.26.4",
    # Forced word-alignment via Meta's MMS-300m (1100+ languages, one model).
    # Refines whisper.cpp's DTW-based word timestamps to sub-100 ms — fixes the
    # imprecise word boundaries that cause downstream diarization to scatter
    # words across the wrong speakers. PyPI publishes a different `ctc-forced-aligner`
    # (deskpai's ONNX repackage), so we install MahmoudAshraf97's via git.
    # Note: `transcript/align.py:_load_model` reimplements the package's
    # `load_alignment_model` helper instead of calling it directly, because
    # the helper hardcodes `.to(device)` with no MPS branch — we want the
    # aligner on Apple Silicon's GPU when available.
    "ctc-forced-aligner @ git+https://github.com/MahmoudAshraf97/ctc-forced-aligner.git",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.4",
]

[project.scripts]
transcript = "transcript.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript"]

# Required for the `ctc-forced-aligner @ git+...` dependency above — hatch
# rejects direct URL references in dependencies otherwise.
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "integration: real whisper.cpp + pyannote, requires install + HF token",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
